[build-system]
requires = ["setuptools==69.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package-dir-editable"
version = "0.0.1"

[tool.setuptools]
packages = [
	"different_name",
	"different_name.subpkg",
]

[tool.setuptools.package-dir]
"different_name" = "src/my_package"
"different_name.subpkg" = "src2/my_package2"

